feat: update backend services and cleanup repository